--- a/main.css
+++ b/main.css
@@ -1,19 +1,64 @@
+
+body {
+	margin: 0;
+	background-color: black;
+}
 button {
 	display: block;
 }
 
 img {
 	display: block;
+	height: 100%;
 }
 
 canvas {
-	
-}
-
-.on {
 	display: block;
 }
 
 .off {
 	display: none;
+}
+
+#container {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#instructions {
+	color: white;
+	font: bold 40px Sans-Serif;
+	text-align: center;
+	
+}
+
+#message {
+	text-align: center;
+  	font: bold 200px Sans-Serif;
+	position: fixed;
+	margin: 0;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	color: #bc2e1e;
+	  text-shadow:
+	    0 1px 0px #378ab4,
+	    1px 0 0px #5dabcd,
+	    1px 2px 1px #378ab4,
+	    2px 1px 1px #5dabcd,
+	    2px 3px 2px #378ab4,
+	    3px 2px 2px #5dabcd,
+	    3px 4px 2px #378ab4,
+	    4px 3px 3px #5dabcd,
+	    4px 5px 3px #378ab4,
+	    5px 4px 2px #5dabcd,
+	    5px 6px 2px #378ab4,
+	    6px 5px 2px #5dabcd,
+	    6px 7px 1px #378ab4,
+	    7px 6px 1px #5dabcd,
+	    7px 8px 0px #378ab4,
+	    8px 7px 0px #5dabcd;
 }
